test/classes/initializers/records/checking-copies-bad.good
checking-copies-bad.chpl:15: error: attempted copy of record 'R' when no copy initializer defined
